[workspace]
resolver = "3"
members = [
    "实现模块/shared-types",
    "实现模块/client-agent",
    "实现模块/management-server",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-types = { path = "实现模块/shared-types" }
