[workspace]
resolver = "3"
members = [
    "实现模块/shared-types",
    "实现模块/client-agent",
    "实现模块/management-server",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
axum = "0.8"
ed25519-dalek = "2"
libloading = "0.8"
mlua = { version = "0.12.0", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shared-types = { path = "实现模块/shared-types" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
