[package]
name = "client-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libloading.workspace = true
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
