[package]
name = "management-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-types.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
